--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,6 +6,7 @@ website:
   navbar:
     right:
       - about.qmd
+      - index.qmd
       - icon: github
         href: https://github.com/
       - icon: twitter
