adding custom.scss file into main config for custo

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,8 +15,8 @@ website:
 #        href: https://mastodon.com
 format:
   html:
-    theme: cosmo
-    css: styles.css
-
+    theme:
+      - cosmo
+      - custom.scss
 
 
